Add runnable workshop diagnostics